<!--
  ~           Copyright © 2016 Stanislav Petriakov
  ~  Distributed under the Boost Software License, Version 1.0.
  ~     (See accompanying file LICENSE_1_0.txt or copy at
  ~           http://www.boost.org/LICENSE_1_0.txt)
  -->

<resources>
    <string name="app_name">Zuk Fingerprint Remap</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="started">Service is running</string>
    <string name="stopped">Service stopped</string>
    <string name="auto_start">Start on open app</string>
    <string name="on_boot">Start on boot</string>
    <string name="none">Default</string>
    <string name="home">Go to home</string>
    <string name="last">Switch last app</string>
    <string name="assist">Google Assist</string>
    <string name="search">Voice Search</string>
    <string name="long_tap">Long tap</string>
    <string name="swipe_left">Swipe left</string>
    <string name="swipe_right">Swipe right</string>
    <string name="save">Save</string>
</resources>
