<?xml version="1.0" encoding="utf-8"?>
<!--
  ~           Copyright © 2016 Stanislav Petriakov
  ~  Distributed under the Boost Software License, Version 1.0.
  ~     (See accompanying file LICENSE_1_0.txt or copy at
  ~           http://www.boost.org/LICENSE_1_0.txt)
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="auto_start"
        android:title="@string/auto_start"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="start_on_boot"
        android:title="@string/on_boot"/>

    <ListPreference
        android:defaultValue="home"
        android:entries="@array/action_title"
        android:entryValues="@array/action_values"
        android:key="long_tap"
        android:title="@string/long_tap"/>

    <ListPreference
        android:defaultValue="last"
        android:entries="@array/action_title"
        android:entryValues="@array/action_values"
        android:key="swipe_right"
        android:title="@string/swipe_right"/>

    <ListPreference
        android:defaultValue="none"
        android:entries="@array/action_title"
        android:entryValues="@array/action_values"
        android:key="swipe_left"
        android:title="@string/swipe_left"/>
</PreferenceScreen>